# cpp_network_IPC_lib

./: CMakeLists.txt  sys_classes.cpp  sys_classes.hpp
tests/: CMakeLists.txt  test_sys_classes.cpp
